--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Lingfei Ren"
-  avatar           : "images/sunyuan.png"
+  avatar           : "images/lingfei.JPG"
   bio              : 
   location         : "Chengdu, China"
   employer         :
